--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 <head>
   <title>Collin M Smith</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" charset="utf-8">
-  <link rel="stylsheet" href="css/styles.min.css" />
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
+  <link rel="stylsheet" href="css/styles.min.css" />
 
   <script src="https://code.jquery.com/jquery-3.1.1.slim.min.js" integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js" integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb" crossorigin="anonymous"></script>
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-  <section>
+  <section class="container">
     <h1>Collin M Smith</h1>
     <h3>Full Stack Web Developer</h3>
   </section>
