Fix typo to allow styles to display

--- a/index.html
+++ b/index.html
@@ -5,17 +5,26 @@
   <title>Collin M Smith</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" charset="utf-8">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
-  <link rel="stylsheet" href="css/styles.min.css" />
+  <link rel="stylesheet" href="css/styles.min.css" />
 
   <script src="https://code.jquery.com/jquery-3.1.1.slim.min.js" integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js" integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb" crossorigin="anonymous"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js" integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn" crossorigin="anonymous"></script>
 </head>
 
-<body>
-  <section class="container">
-    <h1>Collin M Smith</h1>
-    <h3>Full Stack Web Developer</h3>
+<body class="container">
+  <nav class='navbar navbar-default'>
+    <ul>
+      <a class="nav-list" href="#"><li>Work</li></a>
+      <a class="nav-list" href="#"><li>About</li></a>
+      <a class="nav-list" href="#"><li>Resume</li></a>
+      <a class="nav-list" href="#"><li>Contact</li></a>
+      <li style="text-transform: lowercase; float: right;">Logo</li>
+    </ul>
+  </nav>
+
+  <section class='jumbotron'>
+    <h2><strong style="margin-bottom: 10px;">hi, i'm collin!</strong><br /><span style="padding-left: 50px;">i'm a full stack web developer & web designer</span></h2>
   </section>
 </body>
 
