Change jumbotron display

--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@
   </nav>
 
   <section class='jumbotron'>
-    <h2><strong style="margin-bottom: 10px;">hi, i'm collin!</strong><br /><span style="padding-left: 50px;">i'm a full stack web developer & web designer</span></h2>
+    <h2><strong style="margin-bottom: 10px;"><span style="color: #7dd8d2;">Hi, I'm</span> Collin!</strong></h2>
+    <h4>A Full Stack Developer with an emphasis on Front End Development</h4>
   </section>
 </body>
 
