Add graphics, edit styles, and change layout

--- a/index.html
+++ b/index.html
@@ -27,6 +27,17 @@
     <h2><strong style="margin-bottom: 10px;"><span style="color: #7dd8d2;">Hi, I'm</span> Collin!</strong></h2>
     <h4>A Full Stack Developer with an emphasis on Front End Development</h4>
   </section>
+
+  <section class="work">
+    <article class="row">
+      <div class="col-md-6 mylift">
+        <img src="assets/mylift.jpg" alt="MyLift thumbnail"  />
+      </div>
+      <div class="col-md-6">
+
+      </div>
+    </article>
+  </section>
 </body>
 
 </html>
