Make styling changes

--- a/index.html
+++ b/index.html
@@ -19,12 +19,11 @@
       <a class="nav-list" href="#"><li>About</li></a>
       <a class="nav-list" href="#"><li>Resume</li></a>
       <a class="nav-list" href="#"><li>Contact</li></a>
-      <li style="text-transform: lowercase; float: right;">Logo</li>
     </ul>
   </nav>
 
   <section class='jumbotron'>
-    <h2><strong style="margin-bottom: 10px;"><span style="color: #7dd8d2;">Hi, I'm</span> Collin!</strong></h2>
+    <h2><strong style="margin-bottom: 10px;"><span style="color: #932600;">Hi, I'm</span> Collin!</strong></h2>
     <h4>A Full Stack Developer with an emphasis on Front End Development</h4>
   </section>
 
@@ -37,6 +36,29 @@
 
       </div>
     </article>
+    <article class="row">
+      <div class="col-md-4">
+
+      </div>
+      <div class="col-md-4">
+
+      </div>
+      <div class="col-md-4">
+
+      </div>
+    </article>
+  </section>
+
+  <section class="about">
+    <article class="row justify-content-center">
+      <p class="col-md-6">
+        I was introduced to programming by two of my college roommates while I was studying Exercise Science at Florida State University.
+        While in college, I found out the hard (and expensive) way that the major I was in was the wrong choice for me. After getting my
+        degree, I have dedicated all of my time and efforts expanding my skills as a programmer by completing rigorous full stack development
+        courseworks through only
+      </p>
+    </article>
+    <button class='btn contact'>Contact</button>
   </section>
 </body>
 
