--- a/index.html
+++ b/index.html
@@ -23,16 +23,19 @@
   </nav>
 
   <section class='jumbotron'>
-    <h2><strong style="margin-bottom: 10px;"><span style="color: #932600;">Hi, I'm</span> Collin!</strong></h2>
+    <h2><strong style="margin-bottom: 10px;"><span>Hi, I'm</span> Collin!</strong></h2>
     <h4>A Full Stack Developer with an emphasis on Front End Development</h4>
   </section>
 
   <section class="work">
     <article class="row">
-      <div class="col-md-6 mylift">
-        <img src="assets/mylift.jpg" alt="MyLift thumbnail"  />
+      <div class="col-md-4 mylift">
+        <img src="assets/mylift.png" alt="MyLift thumbnail"  />
       </div>
-      <div class="col-md-6">
+      <div class="col-md-4">
+
+      </div>
+      <div class="col-md-4">
 
       </div>
     </article>
@@ -58,7 +61,6 @@
         courseworks through only
       </p>
     </article>
-    <button class='btn contact'>Contact</button>
   </section>
 </body>
 
