Include new assets and update index

--- a/index.html
+++ b/index.html
@@ -30,13 +30,13 @@
   <section class="work">
     <article class="row">
       <div class="col-md-4 mylift">
-        <img src="assets/mylift.png" alt="MyLift thumbnail"  />
+        <img src="assets/mylift.jpg" alt="MyLift thumb"  />
       </div>
       <div class="col-md-4">
-
+        <img src="assets/neighborhood.jpg" alt="Neighborhood Map thumb"  />
       </div>
       <div class="col-md-4">
-
+        <img src="assets/cmdeveloped.jpg" alt="cmdeveloped thumb"  />
       </div>
     </article>
     <article class="row">
