--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
   <section class="work">
     <article class="row">
-      <div class="col-md-4 mylift">
+      <div class="col-md-4">
         <img src="assets/mylift.jpg" alt="MyLift thumb"  />
       </div>
       <div class="col-md-4">
@@ -55,10 +55,10 @@
   <section class="about">
     <article class="row justify-content-center">
       <p class="col-md-6">
-        I was introduced to programming by two of my college roommates while I was studying Exercise Science at Florida State University.
+        <span style="font-size: 24px;">I was introduced</span> to programming by two of my college roommates while I was studying Exercise Science at Florida State University.
         While in college, I found out the hard (and expensive) way that the major I was in was the wrong choice for me. After getting my
         degree, I have dedicated all of my time and efforts expanding my skills as a programmer by completing rigorous full stack development
-        courseworks through only
+        courseworks through Udacity and CodeCademy.
       </p>
     </article>
   </section>
