Restructure index to include asset social

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     </article>
     <article class="row">
       <div class="col-md-4">
-
+        <img src="assets/social.jpg" alt="social thumb"  />
       </div>
       <div class="col-md-4">
 
