Include perfectfit asset and self image

--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
 <body class="container">
   <nav class='navbar navbar-default'>
     <ul>
-      <a class="nav-list" href="#"><li>Work</li></a>
-      <a class="nav-list" href="#"><li>About</li></a>
+      <a class="nav-list" href="#work"><li>Work</li></a>
+      <a class="nav-list" href="#about"><li>About</li></a>
       <a class="nav-list" href="#"><li>Resume</li></a>
       <a class="nav-list" href="#"><li>Contact</li></a>
     </ul>
@@ -27,7 +27,7 @@
     <h4>A Full Stack Developer with an emphasis on Front End Development</h4>
   </section>
 
-  <section class="work">
+  <section class="work" id="work">
     <article class="row">
       <div class="col-md-4">
         <img src="assets/mylift.jpg" alt="MyLift thumb"  />
@@ -39,27 +39,43 @@
         <img src="assets/cmdeveloped.jpg" alt="cmdeveloped thumb"  />
       </div>
     </article>
-    <article class="row">
+    <article class="row justify-content-center">
       <div class="col-md-4">
         <img src="assets/social.jpg" alt="social thumb"  />
       </div>
       <div class="col-md-4">
-
-      </div>
-      <div class="col-md-4">
-
+        <img src="assets/perfectfit.jpg" alt="perfectfit thumb"  />
       </div>
     </article>
   </section>
 
-  <section class="about">
+  <section class="about" id="about">
     <article class="row justify-content-center">
+      <img src="assets/me.jpg" alt="Hello!"  />
       <p class="col-md-6">
-        <span style="font-size: 24px;">I was introduced</span> to programming by two of my college roommates while I was studying Exercise Science at Florida State University.
+        <span style="font-size: 28px;">I was introduced</span> to programming by two of my college roommates while I was studying Exercise Science at Florida State University.
         While in college, I found out the hard (and expensive) way that the major I was in was the wrong choice for me. After getting my
-        degree, I have dedicated all of my time and efforts expanding my skills as a programmer by completing rigorous full stack development
+        degree, I dedicated all of my time and efforts expanding my skills as a programmer by completing rigorous full stack development
         courseworks through Udacity and CodeCademy.
       </p>
+    </article>
+  </section>
+
+  <section class="skills" id="skills">
+    <h1>Skills</h1>
+    <article class="row">
+      <div class="col-md-3">
+
+      </div>
+      <div class="col-md-3">
+
+      </div>
+      <div class="col-md-3">
+
+      </div>
+      <div class="col-md-3">
+
+      </div>
     </article>
   </section>
 </body>
