Styling changes to layout

--- a/index.html
+++ b/index.html
@@ -67,18 +67,19 @@
 
   <section class="skills">
     <h2>Skills to create.</h2>
+    <p>(Ember, Python, & more)</p>
     <article class="row">
       <div class="col-md-4">
+        <div class="ct-chart" id="chart1"></div>
         <h4>HTML</h4>
-        <span class="ct-chart" id="chart1"></span>
       </div>
       <div class="col-md-4">
+        <div class="ct-chart" id="chart2"></div>
         <h4>CSS & Sass</h4>
-        <span class="ct-chart" id="chart2"></span>
       </div>
       <div class="col-md-4">
+        <div class="ct-chart" id="chart3"></div>
         <h4>Javascript & jQuery</h4>
-        <span class="ct-chart" id="chart3"></span>
       </div>
     </article>
   </section>
