--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <ul>
       <a class="nav-list" href="#work"><li>Work</li></a>
       <a class="nav-list" href="#about"><li>About</li></a>
-      <a class="nav-list" href="#"><li>Resume</li></a>
+      <a class="nav-list" href="assets/resume.pdf" download><li>Resume</li></a>
       <a class="nav-list" href="#"><li>Contact</li></a>
     </ul>
   </nav>
@@ -27,6 +27,12 @@
   <section class='jumbotron'>
     <h2><strong style="margin-bottom: 10px;"><span>Hi, I'm</span> Collin!</strong></h2>
     <h4>A Full Stack Developer with an emphasis on Front End Development</h4>
+    <ul>
+      <li><img src="assets/github.svg" alt="Github"></li>
+      <li><img src="assets/facebook.svg" alt="Facebook"></li>
+      <li><img src="assets/twitter.svg" alt="Twitter"></li>
+      <li><img src="assets/linkedin.svg" alt="LinkedIn"></li>
+    </ul>
   </section>
 
   <section class="about" id="about">
@@ -86,19 +92,29 @@
 
   <section class="work" id="work">
     <h2>My work.</h2>
-    <p>More upon request</p>
-    <article class="row justify-content-center">
+    <ul>
+      <li class="active" id="all">all</li>
+      <li id="live">live</li>
+      <li id="mock">mockups</li>
+    </ul>
+    <article class="row justify-content-center live all">
       <div class="col-md-3">
-        <img src="assets/mylift.jpg" alt="MyLift thumb"  />
+        <a href="http://mylift.us" target="_blank">
+          <img src="assets/mylift.jpg" alt="MyLift thumb"  />
+        </a>
       </div>
       <div class="col-md-3">
-        <img src="assets/neighborhood.jpg" alt="Neighborhood Map thumb"  />
+        <a href="https://cmdeveloped.github.io/neighborhood-map/" target="_blank">
+          <img src="assets/neighborhood.jpg" alt="Neighborhood Map thumb"  />
+        </a>
       </div>
       <div class="col-md-3">
-        <img src="assets/cmdeveloped.jpg" alt="cmdeveloped thumb"  />
+        <a href="http://cmdeveloped.us" target="_blank">
+          <img src="assets/cmdeveloped.jpg" alt="cmdeveloped thumb"  />
+        </a>
       </div>
     </article>
-    <article class="row justify-content-center">
+    <article class="row justify-content-center mockups all">
       <div class="col-md-3">
         <img src="assets/social.jpg" alt="social thumb"  />
       </div>
@@ -108,7 +124,8 @@
     </article>
   </section>
 
-  <script src="js/chartist.js"></script>
+  <script type="text/javascript" src="js/chartist.js"></script>
+  <script type="text/javascript" src="js/work.js"></script>
 </body>
 
 </html>
