--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-  <title>Collin M Smith</title>
+  <title>Collin</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" charset="utf-8">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/chartist.js/latest/chartist.min.css">
@@ -124,8 +124,10 @@
     </article>
   </section>
 
+  <!-- Scripts -->
   <script type="text/javascript" src="js/chartist.js"></script>
   <script type="text/javascript" src="js/work.js"></script>
+  <script type="text/javascript" src="js/animations.js"></script>
 </body>
 
 </html>
