Add contact section

--- a/index.html
+++ b/index.html
@@ -16,9 +16,10 @@
 
 <body class="container">
   <nav class='navbar navbar-default'>
-    <ul>
+    <ul class="container">
       <a class="nav-list" href="#work"><li>Work</li></a>
       <a class="nav-list" href="#about"><li>About</li></a>
+      <a class="nav-list" href="#"><li id="logo">C</li></a>
       <a class="nav-list" href="assets/resume.pdf" download><li>Resume</li></a>
       <a class="nav-list" href="#"><li>Contact</li></a>
     </ul>
@@ -98,30 +99,36 @@
       <li id="mock">mockups</li>
     </ul>
     <article class="row justify-content-center live all">
-      <div class="col-md-3">
+      <div class="col-md-4">
         <a href="http://mylift.us" target="_blank">
           <img src="assets/mylift.jpg" alt="MyLift thumb"  />
         </a>
       </div>
-      <div class="col-md-3">
+      <div class="col-md-4">
         <a href="https://cmdeveloped.github.io/neighborhood-map/" target="_blank">
           <img src="assets/neighborhood.jpg" alt="Neighborhood Map thumb"  />
         </a>
       </div>
-      <div class="col-md-3">
+      <div class="col-md-4">
         <a href="http://cmdeveloped.us" target="_blank">
           <img src="assets/cmdeveloped.jpg" alt="cmdeveloped thumb"  />
         </a>
       </div>
     </article>
     <article class="row justify-content-center mockups all">
-      <div class="col-md-3">
+      <div class="col-md-4">
         <img src="assets/social.jpg" alt="social thumb"  />
       </div>
-      <div class="col-md-3">
+      <div class="col-md-4">
         <img src="assets/perfectfit.jpg" alt="perfectfit thumb"  />
       </div>
     </article>
+  </section>
+
+  <section class="contact">
+    <h1>Let's talk!</h1>
+    <p>Want to learn more about me? More about my work? Share something cool you're working on? <br>Whatever it may be, let's get in touch! My email is below.</p>
+    <a href="mailto:cmdeveloped@gmail.com" target="_top"><h4>cmdeveloped@gmail.com</h2></a>
   </section>
 
   <!-- Scripts -->
