--- a/index.html
+++ b/index.html
@@ -14,12 +14,12 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js" integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn" crossorigin="anonymous"></script>
 </head>
 
-<body>
+<body id="top">
   <nav class='navbar navbar-default'>
     <ul>
       <a class="nav-list" id="toWork"><li>Work</li></a>
       <a class="nav-list" id="toAbout"><li>About</li></a>
-      <a class="nav-list" href="index.html"><li id="logo">C</li></a>
+      <a class="nav-list" id="toTop"><li id="logo">C</li></a>
       <a class="nav-list" href="https://cmdeveloped.github.io/live/assets/Resume.pdf" download><li>Resume</li></a>
       <a class="nav-list" id="toContact"><li>Contact</li></a>
     </ul>
